# Px4MPC

./: README.md
px4_ros_com/: CMakeLists.txt  package.xml
px4_ros_com/include/px4_ros_com/: mpc_utils.hpp  quadcopter_model.hpp  quaternion_math.hpp  ricatti.hpp
px4_ros_com/src/examples/: FrequencyCalculator.cpp
px4_ros_com/src/examples/advertisers/: actuator_publisher.cpp  minimal_publisher.cpp
px4_ros_com/src/examples/listeners/: optitrack_listener.cpp
px4_ros_com/src/examples/lqr/: lqr.cpp  lqr_circle_sim.cpp  lqr_sim.cpp  weights.txt  weights_sim.txt
px4_ros_com/src/examples/lqr/data/: control_norm_output.txt  control_output.txt  state_error_output.txt
px4_ros_com/src/examples/lqr/data_sim/: control_norm_output_sim.txt  control_output_sim.txt  state_error_output_sim.txt
px4_ros_com/src/examples/lqr/reference/: ucircle.txt  xcircle.txt
px4_ros_com/src/examples/mpc/: mpc_sim.cpp
px4_ros_com/src/examples/offboard/: offboard_control.cpp
px4_ros_com/src/examples/plotting/: plot_lqroutput.py  plot_state_error.py
px4_ros_com/src/lib/: mpc_utils.cpp  quadcopter_model.cpp  quaternion_math.cpp  ricatti.cpp
